@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        [DOCUMENTATION]
+        - Added documentation on running tests
 
 1.16  2016-08-01 15:38:05 BST
         [MAINTENANCE]
